--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="co.tino.flutter_banking_app">
    <application
-        android:label="Flutter Banking App"
+        android:label="Shopay"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
