--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.1
 
+  flutterwave: ^1.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
